# giraffe

./: 404.html  README.md  b_4dzzjTbRpzxdhaNA5sm8vbmUxjKTD4pfpkp4MHRPsYFr.json  b_4dzzjTbRpzxdhaNA5sm8vbmUxjKTD4pfpkp4MHRPsYFr.pbuf  b_9JabitnBvokxRXfsoCGMrahsub3FpTCwKsUXY9XHW22M.json  b_9JabitnBvokxRXfsoCGMrahsub3FpTCwKsUXY9XHW22M.pbuf  b_9pGHV8YFQ7MDwXjBYD87bVky2LFHCwWecESaQ5K9nYKd.json  b_9pGHV8YFQ7MDwXjBYD87bVky2LFHCwWecESaQ5K9nYKd.pbuf  b_ArwyWBXDr3Hefy4TaFXvAHhDVtH1PpxNGraZwk2YUQFn.json  b_ArwyWBXDr3Hefy4TaFXvAHhDVtH1PpxNGraZwk2YUQFn.pbuf  index.html  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: _build.yml  (+15 more)
dart/: .gitignore
documentation/: docusaurus.config.js  package-lock.json  package.json
rust/giraffe_sdk/: Cargo.toml  build.rs
rust/giraffe_sdk/src/: block_tree.rs  clock.rs  codecs.rs  consensus.rs  data.rs  lib.rs  models.rs
rust/giraffe_sdk/src/consensus/: chain_selection.rs  eta_calculation.rs  header_validation.rs  leader_election.rs  local_chain.rs  protocol_settings.rs  rho.rs
rust/giraffe_sdk/src/minting/: block_production.rs  mod.rs  staking.rs
scala/: .gitignore  .scalafix.conf  .scalafmt.conf  build.sbt
testnet2/: b_B6HJB5v9wzpeYDUeBJA1UXmza9rxyd4MxYxvC4hRak9B.json  b_B6HJB5v9wzpeYDUeBJA1UXmza9rxyd4MxYxvC4hRak9B.pbuf  docker-compose.yaml
testnet3/: b_2rAZvrAFF37bSaK4fVQErkm9r92NBdsevxCZYhsJDUMt.json  b_2rAZvrAFF37bSaK4fVQErkm9r92NBdsevxCZYhsJDUMt.pbuf  docker-compose.yaml
testnet4/: b_4yXEL2yU13XyRu2S1pbZ9ZUys9aDaV8tKmh6Z5WL6eaQ.json  b_4yXEL2yU13XyRu2S1pbZ9ZUys9aDaV8tKmh6Z5WL6eaQ.pbuf  docker-compose.yaml
(+898 files in other folders)
