[package]
name = "giraffe_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-broadcast = "0.7.1"
base58 = "0.2.0"
hex = "0.4.3"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
prost = "0.13"
prost-types = "0.13"
tokio-rusqlite = "0.6.0"
sha2 = "0.10.8"
vrf = "0.2.4"

[build-dependencies]
prost-build = "0.13.3"
